Beta 2
======

- Applied patch from Ernst Naezer's fixing a situation where the prefix is composed
  like "node1.node2.node3"

- Removed support for meta elements (as they were passed 
    via get/form and that doesn't look very safe)

- More test cases were added

- Major refactoring on Graph design and interfaces. However there wasn't any big change 
  on the DataBinder class itself.

- Changed ConvertUtils to consider non successful an attempt to convert a null 
  value to boolean

- Added a CanConvert and an additional Convert

- Added check for duplicate fields in DataReaderAdapter. 

- DataReaderAdapter: Added support for TypeConverters

- Added two events to IDataBinder:

  BinderHandler OnBeforeBinding;
  BinderHandler OnAfterBinding;

- Changed to allow null inputs be passed to type converters

- Changed ConvertUtils behavior. Now empty strings will be converted to null 
  and conversionSucceeded = true. Also, string will be trimmed.

- Introduced DataReaderAdapter which can be used to populate an object based
  on an IDataReader. The adapter does not take ownership of the reader

  Example:
  
    DataBinder binder = new DataBinder();

    SqlConnection conn = new SqlConnection("Server=(local);initial catalog=mydatabase;Integrated Security=SSPI");

    conn.Open();

    SqlCommand cmd = new SqlCommand("select * from products", conn);

    using(IDataReader reader = cmd.ExecuteReader(CommandBehavior.CloseConnection))
    {
        Product[] products = (Product[])
            binder.BindObject(typeof(Product[]), "ignored", 
                new DataReaderAdapter(reader));
    }


  Limitations: only simple properties can be bound. Nested properties are ignored.


- IBinderTranslator: after introducing the DataReaderAdapter, it was necessary 
  create the notion of translation. A translator takes the a property name and
  returns the key that the binder should look up in order to get the value to fill