@@ -1,6 +1,9 @@
 Beta 2
 ======
 
+- Fixed COMP-1 "Binder fails on simple MonoRail binding, when using ASP.NET authentication"
+  Now the TreeBuilder will add as a leaf entries starting with '.', or '[' or ']'
+
 - Applied patch from Ernst Naezer's fixing a situation where the prefix is composed
   like "node1.node2.node3"
 
